--- a/templates/user/gallery.html
+++ b/templates/user/gallery.html
@@ -24,32 +24,26 @@
         </div>
     
         <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
+            <div class="navbar-end">
                 <a class="navbar-item" href="{{ url_for('home') }}">
                     Home
                 </a>
-    
+        
                 <a class="navbar-item" href="{{ url_for('gallery') }}">
                     Gallery
                 </a>
-    
+        
                 <a class="navbar-item" href="{{ url_for('order') }}">
                     Order Now
                 </a>
-            </div>
-    
-            <div class="navbar-end">
-                <div class="navbar-item">
-                    <div class="buttons">
-                        <a class="button is-light">
-                            Log in
-                        </a>
-                        <a class="button is-info">
-                            Sign up
-                        </a>
-                    </div>
+                
+                <div class="buttons ml-5"> <!-- Add margin-left utility class -->
+                    <a class="button is-info" href="{{ url_for('masuk') }}">
+                        JOIN-US
+                    </a>
                 </div>
             </div>
+        </div>
         </div>
     </nav>
     <div class="navbar-end">
