--- a/templates/user/home.html
+++ b/templates/user/home.html
@@ -14,11 +14,11 @@
         }
             /* Simplify the hero section styling */
         .hero-body {
-            background-image: url("{{ url_for('static', filename='cover1.jpg') }}");
+            background-image: url("{{ url_for('static', filename='cover4.jpg') }}");
             background-size: cover;
             background-position: center;
             height: 100vh;
-            width: 100%;
+            width: 100%;             
         }
 
         .hero-body {
@@ -33,10 +33,9 @@
             background-color: rgb(21, 99, 216);
         }
         #hero, .hero-body, .title, .subtitle{
-            color: rgb(16, 140, 248);
+            color: rgb(31, 251, 255);
             font-size: xx-large;
-        }
- 
+        } 
     </style>     
 </head>
 <body>
@@ -57,34 +56,27 @@
     </div>
 
     <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
+        <div class="navbar-end">
             <a class="navbar-item" href="{{ url_for('home') }}">
                 Home
             </a>
-
+    
             <a class="navbar-item" href="{{ url_for('gallery') }}">
                 Gallery
             </a>
-
+    
             <a class="navbar-item" href="{{ url_for('order') }}">
                 Order Now
             </a>
- 
-        </div>
-
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="buttons">
-                    <a class="button is-light">
-                        Log in
-                    </a>
-                    <a class="button is-info">
-                        Sign up
-                    </a>
-                </div>
+            
+            <div class="buttons ml-5"> <!-- Add margin-left utility class -->
+                <a class="button is-info" href="{{ url_for('masuk') }}">
+                    JOIN-US
+                </a>
             </div>
         </div>
     </div>
+     
 </nav>
     <div class="hero-body">                 
         <div class="container has-text-centered">
@@ -122,7 +114,7 @@
             </div>
             <div class="column is-one-quarter">
                 <figure class="image is-4by3">
-                    <img src="{{ url_for('static', filename='cover4.jpg') }}" alt="Destination 4">
+                    <img src="{{ url_for('static', filename='cover1.jpg') }}" alt="Destination 4">
                 </figure>
             </div>
         </div>
